--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-i18n="page_title">LessEnergy - Ahorra Energía</title>
-    <link rel="stylesheet" href="style.css">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+
+    <link rel="stylesheet" href="assets/styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
 
     <header>
@@ -107,13 +112,13 @@
                     <p data-i18n="feat1_desc">Te ayudamos a estabilizar tu consumo de energía para que puedas encontrar errores en tu factura de luz</p>
                 </div>
                 <div class="feature-image">
-                    <img src="assets/ahorra-mas.png" alt="Mano depositando una moneda en una alcancía de cerdo">
+                    <img src="assets/images/ahorra-mas.png" alt="Mano depositando una moneda en una alcancía de cerdo">
                 </div>
             </div>
 
             <div class="feature-row reverse">
                 <div class="feature-image">
-                    <img src="assets/inteligencia-artificial.png" alt="Robot con un carrito de compras">
+                    <img src="assets/images/inteligencia-artificial.png" alt="Robot con un carrito de compras">
                 </div>
                 <div class="feature-content">
                     <h2 data-i18n="feat2_title">Inteligencia artificial</h2>
@@ -127,7 +132,7 @@
                     <p data-i18n="feat3_desc">Usamos interfaces intuitivas, que se adaptan a todo tipo de edades y niveles tecnológicos.</p>
                 </div>
                 <div class="feature-image">
-                    <img src="assets/facil-de-usar.png" alt="Mano sosteniendo un teléfono con la aplicación LessEnergy">
+                    <img src="assets/images/facil-de-usar.png" alt="Mano sosteniendo un teléfono con la aplicación LessEnergy">
                 </div>
             </div>
         </section>
@@ -263,7 +268,7 @@
         <div class="container join-us-container">
             
             <div class="join-image">
-                <img src="assets/pareja-registro.jpg" alt="Pareja sonriente mirando un teléfono">
+                <img src="assets/images/pareja-registro.jpg" alt="Pareja sonriente mirando un teléfono">
             </div>
 
             <div class="join-form-wrapper">
@@ -321,6 +326,6 @@
     </section>
     </main>
 
-    <script src="script.js"></script>
+    <script src="assets/scripts/script.js"></script>
 </body>
 </html>
